# cowprotocol-client

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: fetch_auction.rs  fetch_order.rs  fetch_solver_competition_by_tx_hash.rs  fetch_solver_competition_latest.rs
resources/: response_auction.json  response_solver_competition_latest.json
src/: client.rs  constants.rs  types.rs
src/types/: auction.rs  solver_competition.rs
