[package]
name = "cowprotocol-api-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
alloy-primitives = { version = "0.8", features = ["serde"] }
